# SCALib

./: pyproject.toml  setup.cfg
docs/: requirements.txt
src/scalib_ext/: Cargo.toml
src/scalib_ext/ranklib/: Cargo.toml
src/scalib_ext/scalib/: Cargo.toml
src/scalib_ext/scalib-py/: Cargo.toml
src/scalib_ext/scalib/benches/: get_snr.rs  mlda.rs  snr_update.rs
src/scalib_ext/scalib/src/: ttest.rs
